--- a/src/main/webapp/css/css.css
+++ b/src/main/webapp/css/css.css
@@ -1,11 +1,11 @@
 @import url('https://fonts.googleapis.com/css?family=Lato|Raleway|Lora|Comfortaa');
 
 body {
-    background-color: #f2f2f2;
+    background-color: #c5c5c5 !important;
     font-family: "Comfortaa";
     font-weight: 300;
     font-size: 16px;
-    color: #333;
+    color: #000000 !important;
     
     -webkit-font-smoothing: antialiased;
     -webkit-overflow-scrolling: touch;
@@ -29,15 +29,14 @@ p {
 }
 
 a {
-    color: #f2f2f2;    
+    color: #000000;
 }
 
 a:hover, a:focus {
-    color: #f85c37;
+    color: #f33 !important;
     text-decoration: none;
     outline: 0;
 }
-
 hr {
     display: block;
     height: 1px;
@@ -54,29 +53,52 @@ hr {
     padding-bottom: 15px;
 }
 
-
 .navbar-inverse {
-    background: rgba(45, 45, 45, 0.5);
-    border-color: rgba(45, 45, 45, 0.5);
+    background: #ffffff !important;
+    border-color: #c9cecf !important;
 }
 
-
+.navbar-inverse .navbar-nav > .active > a {
+    background: #ffffff !important;
+    border-color: #f33;
+}
+.navbar .nav >.open > a {
+    background: #ffffff !important;
+    border-color: #f33;
+}
 
 .navbar .nav >li >a {
-    color: #f2f2f2;
+    color: #000000 !important;
     font-family: "Comfortaa";
+    border-bottom: 3px solid transparent;
 }
-
+.navbar .nav a:hover, a:focus {
+    color: #f33 !important;
+    text-decoration: none;
+    outline: 0;
+}
 .navbar-inverse .navbar-brand {
-    color: #f2f2f2;
+    color: #000000;
+    font-size: 22px;
+    font-family: "Comfortaa";
+    letter-spacing: 1px;
+}
+.navbar-inverse .navbar-brand b{
+    color: #000000;
     font-weight: bolder;
+    font-family: "Comfortaa";
     font-size: 22px;
     letter-spacing: 1px;
-    text-transform: uppercase;
 }
 
+.navbar-inverse .navbar-brand a{
+    color: #000000;
+    font-size: 22px;
+    letter-spacing: 1px;
+}
+
+
 #headerwrap {
-	
     margin-top: -100px;
     padding-top: -4px;
     text-align: center;
