--- a/src/main/webapp/css/css.css
+++ b/src/main/webapp/css/css.css
@@ -188,3 +188,71 @@ footer a{
     background: #fff;
     display: block;
 }
+.track{
+    margin-bottom: 20px;
+    font-size: 14px;
+    line-height: 20px;
+    font-weight: normal;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    justify-content: space-between;
+    align-items: center;
+    height: 40px;
+    position: relative;
+    cursor: pointer;
+}
+.track_start{
+    overflow: hidden;
+    width: 40px;
+    min-height: 20px;
+    margin-left: 7px;
+    height: 50px;
+    flex: 0 0 60px;
+}
+.track__cover {
+    display: block;
+}
+.track_info{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    justify-content: space-between;
+    align-items: center;
+    display: -ms-flexbox;
+    white-space: nowrap;
+    overflow: hidden;
+    width: 50%;
+    min-width: 0;
+    flex: 1 1 auto;
+}
+.track_info_secondery{
+    overflow: hidden;
+    text-overflow: ellipsis;
+    -ms-flex: 1;
+    flex-grow: 1;
+    min-width: 0;
+    color: #777;
+    line-height: 21px;
+}
+.track_name{
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+}
+.track_meta{
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    padding: 0 0 0 5px;
+    padding-left: 0;
+}
+.track_end{
+    flex: 0 0 auto;
+    white-space: nowrap;
+    padding: 0 10px 0 0;
+    text-align: right;
+}
+.header1{
+    padding: 0 30px;
+}
