--- a/src/main/webapp/css/css.css
+++ b/src/main/webapp/css/css.css
@@ -189,7 +189,7 @@ footer a{
     display: block;
 }
 .track{
-    margin-bottom: 20px;
+    margin-bottom: -2px;
     font-size: 14px;
     line-height: 20px;
     font-weight: normal;
@@ -198,9 +198,19 @@ footer a{
     flex-wrap: nowrap;
     justify-content: space-between;
     align-items: center;
-    height: 40px;
+    height: 60px;
     position: relative;
     cursor: pointer;
+    content: " ";
+    top: 3px;
+    left: -1px;
+    right: -1px;
+    bottom: -1px;
+    border: 2px solid transparent;
+    box-sizing: border-box;
+}
+.track:hover{
+    border-color: #ffdb4d;
 }
 .track_start{
     overflow: hidden;
@@ -209,10 +219,64 @@ footer a{
     margin-left: 7px;
     height: 50px;
     flex: 0 0 60px;
+    padding-top: 5px;
 }
 .track__cover {
     display: block;
 }
+.track_bub{
+    position: absolute;
+    width: 28px;
+    height: 28px;
+    top: 15px;
+    left: 14px;
+    border-radius: 28px;
+    background-color: #fc0;
+    display: none;
+}
+.track_play_hover{
+    display: none;
+    position: absolute;
+    top: -1px;
+    left: 3px;
+    width: 25px;
+    height: 25px;
+    background: rgba(0, 0, 0, 0);
+}
+.btn_play{
+    font-family: "Comfortaa";
+    cursor: pointer;
+    background-clip: padding-box!important;
+    border-radius: 3.1px;
+    -webkit-user-select: none;
+    user-select: none;
+    display: inline-block;
+    box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    text-decoration: none;
+    color: #000!important;
+    white-space: nowrap;
+    outline: 0;
+    transition: background .15s ease-out;
+    width: 30px;
+    height: 30px;
+    line-height: 30px;
+    border: 0;
+    box-shadow: none;
+    border-width: 0;
+    position: absolute;
+    background: transparent;
+    border-color: #ffdb4d;
+    top: 15px;
+    left: 11px;
+}
+.track:hover .track_play_hover {
+     display:block;
+ }
+.track:hover .track_bub {
+    display:block;
+}
+
 .track_info{
     display: flex;
     flex-direction: row;
