--- a/src/main/webapp/css/css.css
+++ b/src/main/webapp/css/css.css
@@ -6,7 +6,7 @@ body {
     font-weight: 300;
     font-size: 16px;
     color: #000000 !important;
-    
+
     -webkit-font-smoothing: antialiased;
     -webkit-overflow-scrolling: touch;
     
@@ -127,51 +127,16 @@ hr {
 #headerwrap h2 {
     color: #f2f2f2;
 }
-
-.w {
-    padding-bottom: 25px;
-}
-
-.w h4 {
-    font-size: 25px;
-    margin-bottom: 30px;
-}
-
-.poster {
-    width: 270px;
-    height: 374px;
-}
-
-.film-name {
-    min-height: 85px;
-}
-
-footer {
-    background-color: #2d2d2d;
-    padding-top: 30px;
-    padding-bottom: 20px;
-}
-
-footer h4 {
-    color: antiquewhite;
-}
-
-.section-title {
-    margin-top: 5px;
-    margin-bottom: 20px;
-}
-
-footer i {
-    color: #f2f2f2;
-}
-
-footer i:hover, i:focus {
-    color: #f85c37;
-}
-
-footer a{
-    font-size: 50px;
-    padding: 20px;
+.footer {
+    font-family: "Comfortaa";
+    border: 1px solid #c9cecf;
+    box-sizing: border-box;
+    font-size: 14px;
+    border-radius: 4px;
+    background: #ffffff !important;
+    min-width: 840px;
+    max-width: 1440px;
+    margin: 0 auto;
 }
 .albumName{
     text-indent: 20px;
@@ -187,6 +152,7 @@ footer a{
     margin: 0 auto;
     background: #fff;
     display: block;
+    padding-bottom: 36px;
 }
 .track{
     margin-bottom: -2px;
@@ -342,4 +308,86 @@ footer a{
 }
 .header1{
     padding: 0 30px;
+}
+.playPic{
+    display: inline-block;
+    margin-left: 30px;
+}
+.jp_container_1{
+    position: relative;
+    height: 100%;
+    min-height: 60px;
+    background: rgba(255,255,255,0.95);
+}
+.jp-progress{
+    position: absolute;
+    left: 0 !important;
+    width: 100% !important;
+    top: 1px !important;
+    bottom: 60px;
+    height: 15px !important;
+    cursor: default;
+    background-color: #fc0 !important;
+}
+.progress_bg{
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    height: 5px;
+    background: #ebebeb;
+}
+.jp-time-holder{
+    z-index: 40;
+}
+.jp-current-time{
+    position: absolute;
+    top: -52px !important;
+    left: -95px;
+    text-align: center;
+    color: #000;
+    font-size: 11px;
+    margin-left: 10px;
+    float: left;
+    display: inline-block;
+}
+.jp-duration{
+    position: absolute;
+    top: -52px;
+    left: 1295px;
+    text-align: center;
+    color: #000;
+    font-size: 11px;
+    margin-left: 10px;
+    float: left;
+    display: inline-block;
+}
+.jp-volume-controls{
+    left: 1336px !important;
+}
+.jp-interface{
+   height: 66px !important;
+}
+.track_info_player{
+    position: absolute;
+    top: 40px;
+    left: 180px;
+    width: 90px;
+    height: 90px;
+    color: black;
+    font-family: "Comfortaa";
+}
+.track_name_player{
+    position: absolute;
+    top: -25px;
+    left: -26px;
+    display: inline-block;
+    font-size: 14px;
+}
+.track_meta_player{
+    position: absolute;
+    top: -2px;
+    left: -26px;
+    display: inline-block;
+    font-size: 14px;
 }
