--- a/src/main/webapp/css/css.css
+++ b/src/main/webapp/css/css.css
@@ -420,3 +420,27 @@ hr {
     display: inline-block;
     font-size: 14px;
 }
+.nav-tabs{
+    margin-top: 10px;
+    border-bottom: 1px solid #e5e5e5 !important;
+}
+.nav-tabs > .active > a {
+    background: #ffffff !important;
+    border-color: white !important;
+    border-bottom: 3px solid #f33 !important;
+}
+.nav-tabs >.open > a {
+    background: #ffffff !important;
+}
+
+.nav-tabs >li >a {
+    color: #000000 !important;
+    font-family: "Comfortaa";
+    border-bottom: 3px solid #f33;
+}
+.nav-tabs  a:hover, a:focus {
+    color: #f33 !important;
+    /*border-bottom: 3px solid #f33 !important;*/
+    text-decoration: none;
+    outline: 0;
+}
