--- a/src/main/webapp/css/main.css
+++ b/src/main/webapp/css/main.css
@@ -155,3 +155,93 @@ a:hover{
     text-overflow: ellipsis;
     overflow: hidden;
 }
+.user_band{
+    margin: 15px -15px 0 -15px;
+}
+.band{
+    width: 33.3%;
+    height: 310px;
+    display: inline-block;
+    vertical-align: top;
+}
+.band_content{
+    padding-top: 15px;
+    padding-right: 15px;
+    padding-bottom: 15px;
+    padding-left: 15px;
+    margin: 0 15px 30px 16px;
+    font: 13px "Comfortaa";
+    outline: 1px solid #e6e6e6;
+    overflow: visible;
+    cursor: pointer;
+    position: relative;
+}
+.band_hover{
+    position: absolute;
+    width: 200px;
+    height: 200px;
+    left: 50%;
+    margin-left:-100px;
+    z-index: 2;
+}
+.band_hover_action{
+    position: absolute;
+    top: 50%;
+    left: 0;
+    right: 0;
+    height: 58px;
+    margin-top: -29px;
+    z-index: 2;
+    text-align: center;
+}
+.band_overlap{
+    display: none;
+    position: absolute;
+    top: -87px;
+    left: -90px;
+    right: 0;
+    bottom: 87px;
+    background: rgba(34,34,34,0.6);
+    z-index: 1;
+    border-radius: 100px;
+}
+.album:hover .band_overlap{
+    display: block;
+}
+.band_cover{
+    height: 200px;
+    position: relative;
+    line-height: 198px;
+    text-align: center;
+}
+.band_cover-img{
+    display: block;
+    width: 200px;
+    height: 200px;
+    position: absolute;
+    left: 50%;
+    margin-left: -100px;
+    border-radius: 100px;
+    background-size: cover;
+    background-position: 50% 50%;
+    background-repeat: no-repeat;
+}
+.band_name{
+    margin-right: 40px;
+    margin-top: 12px;
+    overflow: hidden;
+    font: bold 15px/21px "Comfortaa";
+    line-height: 18px;
+    height: 18px;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    overflow: hidden;
+}
+.band_summary{
+    color: #999;
+    margin-top: 5px;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    min-height: 15px;
+}
