--- a/src/main/webapp/css/css.css
+++ b/src/main/webapp/css/css.css
@@ -73,6 +73,9 @@ hr {
     font-family: "Comfortaa";
     border-bottom: 3px solid transparent;
 }
+.navbar-nav{
+    float: right;
+}
 .navbar .nav a:hover, a:focus {
     color: #f33 !important;
     text-decoration: none;
@@ -98,35 +101,6 @@ hr {
     letter-spacing: 1px;
 }
 
-
-#headerwrap {
-    margin-top: -100px;
-    padding-top: -4px;
-    text-align: center;
-    background-attachment: relative;
-    background-position: center top;
-    min-height: 500px;
-    width: 100%;
-    
-    background-size: 100%;
-        
-    -webkit-background-size cover;
-    -moz-background-size cover;
-    -o-background-size cover;
-    background-size cover;
-}
-
-#headerwrap h1 {
-    margin-top: 125px;
-    color: #9a9a9a;
-    font-size: 70px;
-    font-weight: 300;
-    letter-spacing: 3px;
-}
-
-#headerwrap h2 {
-    color: #f2f2f2;
-}
 .footer {
     font-family: "Comfortaa";
     border: 1px solid #c9cecf;
