--- a/src/main/webapp/css/main.css
+++ b/src/main/webapp/css/main.css
@@ -169,3 +169,43 @@ a:hover{
 .album:hover .band_overlap{
     display: block;
 }
+
+.headerwrap {
+    margin-top: -230px;
+    padding-top: -4px;
+    text-align: center;
+    background-attachment: relative;
+    background-position: left bottom;
+    width: 100%;
+    height: 470px;
+    background: url(../img/genre/genre.jpg);
+    background-size: 100%;
+
+    -webkit-background-size cover;
+    -moz-background-size cover;
+    -o-background-size cover;
+    background-size cover;
+}
+
+.headerwrap h1 {
+    margin-top: 205px;
+    margin-left: -1030px;
+    color: #ffffff;
+    font-size: 70px;
+    font-weight: 300;
+    letter-spacing: 3px;
+    text-shadow: 0 1px 1px rgb(24, 0, 218);
+}
+.genreTitle{
+    padding-top: 180px;
+}
+.genre_overlap{
+    display: block;
+    position: absolute;
+    top: 273px;
+    left: -30px;
+    right: 1010px;
+    bottom: 367px;
+    background: rgba(34,34,34,0.6);
+    z-index: 1;
+}
